--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for perl distribution Mojo-Run3
  - Add support for MOJO_RUN3_DEBUG=1
  - Add support for IO::Pty
  - Add handle()
+ - Add "sshpass" example
 
 0.01 2022-06-10T20:31:39+0900
  - Add close(), kill(), start(), write()
