--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for perl distribution Mojo-Run3
 
+0.03 Not Released
+ - Need to receive EOF on boh STDERR and STDOUT before emitting "finish"
+
 0.02 2022-06-11T11:17:26+0900
  - Changed "read" event to "stdout", "stderr" and "pty"
  - Add support for MOJO_RUN3_DEBUG=1
