Fix also closing the pty when stdin gets closed

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for perl distribution Mojo-Run3
 
+0.04 Not Released
+ - Fix also closing the pty when stdin gets closed
+
 0.03 2022-06-12T11:21:31+0900
  - Need to receive EOF on boh STDERR and STDOUT before emitting "finish"
 
