Add support for close("other");

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for perl distribution Mojo-Run3
 
+0.06 Not Released
+ - Add support for close("other");
+
 0.05 2022-06-13T18:53:02+0900
  - Will automatically clean up on destroy
 
