--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for perl distribution Mojo-Run3
 
+0.07 Not Released
+ - Fix failing tests
+
 0.06 2022-09-14T19:41:37
  - Add bytes_waiting()
  - Add support for close("other");
