--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for perl distribution Mojo-Run3
 
+1.00 Not Released
+ - Changed driver() to support driver per filehandle
+ - Add support for seperate stdin and pty
+ - Add support for attaching stdout or stderr to pty
+ - Add support for writing to both pty and stdin
+
 0.07 2022-10-16T15:39:52
  - Fix failing tests
 
